# taskbit

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierignore  AGENTS.md  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.base.json  tsconfig.json  turbo.json  vite.config.ts
.codex/environments/: environment.toml
apps/api/: AGENTS.md  nitro.config.ts  package.json  tsconfig.json
apps/api/server/api/: health.test.ts  health.ts
apps/api/server/routes/: index.test.ts  index.ts
apps/desktop/: AGENTS.md  package.json
apps/desktop/scripts/: install-app.mjs  install-app.test.mjs  tauri-conf.test.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: AGENTS.md  components.json  package.json  tsconfig.json  vite.config.ts
apps/web/public/: manifest.json
apps/web/src/: config.ts  main.tsx  routeTree.gen.ts  router.tsx  styles.css
apps/web/src/components/: app-header.test.tsx  app-header.tsx
apps/web/tests/: branding-config.test.ts  oxc-tooling.test.ts  render-with-router.tsx
docs/spec/: 2026-04-24-home-about-redesign-design.md  2026-04-24-marketing-app-shell-redesign-design.md
src/: config.ts  main.tsx
src/components/: app-header.test.tsx  app-header.tsx  home-page.tsx
src/routes/: -about.test.tsx  -index.test.tsx  __root.tsx  about.tsx  index.tsx
src/test/: router-test-utils.tsx
tests/: branding-config.test.ts  oxc-tooling.test.ts
(+13 files in other folders)
